k8s/02-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: prod
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None # This makes it a Headless Service
  selector:
    app: postgres
