k8s/05-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-svc
  namespace: prod
  # Add an annotation GKE needs for NodePort services
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  # --- THIS IS THE FIX ---
  # Change type from ClusterIP to NodePort
  type: NodePort
  selector:
    app: hello-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
